--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   "nav main"
   "footer footer";
 	font-family: system-ui, sans-serif;
-	font-size: 1.5em;
+	font-size: 1.8em;
 }
 
 
@@ -41,13 +41,13 @@ h1 {
 }
 
 h2 {
-	font-size: 3.8rem;
+	font-size: 4rem;
 	line-height: 1.25;
 	letter-spacing: -.1rem;
 }
 
 h3 {
-	font-size: 2.6rem;
+	font-size: 3rem;
 	line-height: 1.3;
 	letter-spacing: -.1rem;
 }
@@ -56,6 +56,7 @@ h4 {
 	font-size: 2.0rem;
 	line-height: 1.35;
 	letter-spacing: -.08rem;
+  font-weight: bold;
 }
 
 header {
@@ -154,6 +155,7 @@ figure iframe {
 
 figure figcaption {
 	text-align: center;
+  font-size: 1.5rem
 }
 
 blockquote {
